# PyTorch-Framework

./: CMakeLists.txt  README.md  binding.cc  boston_custon_torch.py  mnist_custom_torch.py  regression_custom_torch.py  test.py
JAX/: jax_test.py  jax_train.py  jax_weights.npz
PyTorch/: pt_test.py  pt_train.py  pt_weights.pth
TensorFlow/: data_preprocess_tf.py  tf_test.py  tf_train.py  tf_weights.weights.h5
full_torch/: CMakeLists.txt  boston_custom_torch.py  logistic_custom_torch.py  mnist_custom_torch.py  regression_custom_torch.py
full_torch/datasets/: p.py  test.py
full_torch/pytorch_scripts/: boston_pytorch.py  logistic_pytorch.py  mnist_pytorch.py  regression_pytorch.py
full_torch/src/loss/: binary_cross_entropy_loss.h  mse_loss.h
full_torch/src/optimizers/: rmsprop.h  sgd.h
full_torch/src/tensor/: tensor.cu  tensor.h  tensor_pybind.cc
pytorch_scripts/: boston_pytorch.py  mnist_pytorch.py  regression_pytorch.py
results/: jax_metrics.csv  pt_metrics.csv  tf_metrics.csv
src/layers/: linear.cc  linear.h  linear_README.md
src/loss/: cross_entropy_loss.cc  cross_entropy_loss.h  cross_entropy_loss_README.md  loss_pybind.cc  mse_loss.cc  mse_loss.h  mse_loss_README.md
src/optimizers/: adam.cc  adam.h  adam_README.md  rmsprop_README.md  sgd.cc  sgd.h  sgd_README.md
src/tensor/: compile_test.sh  tensor.cc  tensor.cu  tensor.h  tensor_README.md  tensor_gpu.cu  tensor_gpu.h  tensor_kernels.cu  tensor_pybind.cc  tesnor.cu
